# langchain_agent_robot_controller_ros2

./: README.md  package.xml  setup.cfg  setup.py  test_data.txt
langchain_agent_robot_controller_ros2/: gpt_controller.py
